objects/Ecommerce_Configuration__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>Cancel_Url__c</fullName>
        <label>Cancel Url</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Failed_Url__c</fullName>
        <label>Failed Url</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Success_Url__c</fullName>
        <label>Success Url</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Ecommerce Configuration</label>
</CustomObject>